@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 === Added
 
 * ventilate prose on semi-colon following non-space character
+* add :preprocessors option to convert API; apply default preprocessors if not set; apply none if falsy (#23)
 
 === Changed
 
